logs/loss_ablation_no_fsdp/lsai-446997.out
START TIME: Sun May 18 15:13:32 CEST 2025
slurmstepd: error: couldn't chdir to `/workspace': No such file or directory: going to /tmp instead
slurmstepd: error: couldn't chdir to `/workspace': No such file or directory: going to /tmp instead
  File "/iopsstor/scratch/cscs/elyulina/lai-proj/train.py", line 33
    n_heads=32,x 
               ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
srun: error: nid006458: task 0: Exited with exit code 1
srun: Terminating StepId=446997.0
END TIME: Sun May 18 15:13:43 CEST 2025
